# babel

./: Cargo.toml  README.md  dhat-heap-doi.json  dhat-heap-fulltext.json  dhat-heap-isbn.json  dhat-heap.json  flake.nix  result
.direnv/: flake-profile-1-link
benches/: benchmark.rs  query.rs
lib/: default.nix  filesInDir.nix  forAllSystems.nix
lib/emacs/: buildPackages.nix  default.nix  mkEmacs.nix  orgTangle.nix  orgTangleToString.nix  parsePackagesFromUsePackage.nix  wrapEmacs.nix
lib/emacs/npins/: sources.json
lib/int/: default.nix  scale.nix
lib/modules/: default.nix  importInDirectory.nix
lib/nvim/: default.nix  mapPlugins.nix  mkNeovim.nix  mkNvimPlugin.nix
lib/path/: default.nix  getDirectories.nix  getFiles.nix  getItemsOfType.nix
lib/pkgs/: default.nix  mkWrapper.nix
lib/system/: default.nix  mkSystem.nix
lib/text/: default.nix  hr.nix
lib/tmux/: default.nix  mkTmuxConfig.nix
nix/pkgs/package/: default.nix
nix/shell/: default.nix
overlays/: default.nix
overlays/askii/: default.nix
overlays/fast-fonts/: default.nix
overlays/fzf-bibtex/: default.nix
overlays/generate-domains-blocklist/: default.nix
overlays/generate-domains-blocklist/_sources/: generated.nix
overlays/ghostty-hardened/: default.nix
overlays/literata/: default.nix
overlays/ropr/: default.nix
proptest-regressions/lib/: query.txt
proptest-regressions/lib/query/: mod.txt
src/: cli.rs  main.rs
src/lib/: bot.rs  mod.rs  query.rs
src/lib/providers/: mod.rs  openalex.rs
src/lib/query/: doi.rs  isbn.rs  mod.rs  util.rs
