[package]
name = "babel"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", default-features = false, features = ["derive", "help", "std", "suggestions", "usage"] }
color-eyre = { version = "0.6.5", default-features = false }
serenity = { version = "0.12.5", default-features = false }

[dev-dependencies]
criterion = "0.8.0"
proptest = "1.9.0"
proptest-derive = "0.7.0"

[lib]
name = "babel"
path = "src/lib/mod.rs"

[[bin]]
name = "babel"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
