[package]
name = "babel"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", default-features = false, features = ["derive", "help", "std", "suggestions", "usage"] }
color-eyre = { version = "0.6.5", default-features = false }
serenity = { version = "0.12.5", default-features = false }
percent-encoding = { version = "2.3.2", default-features = false }
dhat = { version = "0.3.3", optional = true }

[dev-dependencies]
criterion = "0.8.1"
proptest = "1.9.0"
proptest-derive = "0.7.0"

[lib]
name = "babel"
path = "src/lib/mod.rs"

[[bin]]
name = "babel"
path = "src/main.rs"

[[bench]]
name = "query"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.debug-release]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dep:dhat"]
dhat-ad-hoc = ["dep:dhat"]
