[package]
name = "babel"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", default-features = false, features = ["derive", "help", "std", "suggestions", "usage"] }
color-eyre = { version = "0.6.5", default-features = false }
percent-encoding = { version = "2.3.2", default-features = false }
dhat = { version = "0.3.3", optional = true }
memchr = { version = "2.7.6", default-features = false, features = ["std"] }
serenity = "0.12.5"
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync"] }
tracing-subscriber = "0.3.22"

[dev-dependencies]
criterion = "0.8.1"
proptest = "1.9.0"
proptest-derive = "0.7.0"

[lib]
name = "babel"
path = "src/lib/mod.rs"

[[bin]]
name = "babel"
path = "src/main.rs"

[[bench]]
name = "query"
harness = false

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"

[profile.debug-release]
inherits = "release"
debug = "line-tables-only"

[features]
dhat-heap = ["dep:dhat"]
dhat-ad-hoc = ["dep:dhat"]
